@@ -7,8 +7,9 @@ o Added create-sidmap.pl to contrib section. It's a script that generates
   but this one handles multi-line rules).
 o The 'modifysid' keyword now regards the arguments as regular expressions.
   So if you already use this function, you may have to adjust the arguments.
-  Based on a patch from operator@email.it.
+  Based on a patch from operator@email.it. Also added a bunch of examples.
 o Added sample systrace policy to contrib section.
+o Understand Snort_inline's "drop", "sdrop" and "reject" rules.
 o You can now start Perl with tainting checks enabled if you like
   (not done by default yet).
 o The default temporary directory will be checked for in the environment
